<resources>
    <!--    Datos de la app-->
    <string name="app_name">WeMee7</string>
    <string name="dominio">http://wemee7.acd/</string>
    <string name="shared_key">com.example.weMee7.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">340200584041-bsn5i3d80fe3sb04bo3s6c8hferi6j3o.apps.googleusercontent.com</string>

    <!--    Titulos Toolbar / Menu hamburguesa-->
    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_nueva_reunion">Nueva reunión</string>
    <string name="menu_about">Acerca de la aplicación</string>
    <string name="menu_settings">Ajustes de la cuenta</string>
    <string name="menu_reunion">Detalle de la reunión</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!--    Opciones del drawer inferior-->
    <string name="drawer_reunion">Crear reunión</string>
    <string name="drawer_tarea">Nueva tarea</string>
    <string name="drawer_unirse">Unirse a una reunión</string>

    <!--    Texto de mensajes Toast-->
    <string name="msj_offline">No hay conexión a Internet</string>
    <string name="msj_vincular_tlf">Teléfono vinculado con éxito</string>
    <string name="msj_desvincular_tlf">Se ha desvinculado el teléfono</string>
    <string name="msj_vincular_fail">No se ha podido vincular el teléfono</string>
    <string name="msj_desvincular_fail">Error al desvincular el teléfono</string>
    <string name="msj_rellenar_campos">Rellene todos los campos</string>
    <string name="msj_email_fail">Formato de email incorrecto</string>
    <string name="msj_pass_fail">La contraseña ha de tener entre 6 y 16 caracteres</string>
    <string name="msj_pass_diferente">Debes introducir la misma contraseña</string>
    <string name="msj_telefono_fail">Formato de teléfono incorrecto</string>
    <string name="msj_fUser_fail">No se ha podido recuperar el usuario</string>
    <string name="msj_googleToken_fail">No se ha podido validar la cuenta seleccionada</string>
    <string name="msj_googleSignIn_fail">No se ha podido iniciar sesión con Google</string>
    <string name="msj_emailYaRegistrado">Este email ya está registrado</string>
    <string name="msj_credenciales_fail">Credenciales incorrectas</string>
    <string name="msj_enlace_invitacion">El enlace de invitación se ha copiado en el portapapeles</string>
    <string name="msj_enlace_fail">Identificador de reunion desconocido</string>
    <string name="msj_invitacion_creador">Esta reunion ha sido creada por ti</string>
    <string name="msj_invitacion_yainvitado">Ya has sido invitado a esta reunión</string>
    <string name="msj_reunion_yacelebrada">Esta reunión ya se ha celebrado</string>
    <string name="msj_invitacion_annadida">Se ha añadido una nueva invitación</string>
    <string name="msj_unirse_fail">Debes copiar un link de invitación válido</string>
    <string name="msj_nombre_reunion">Ponle un nombre a la reunión</string>
    <string name="msj_reunion_modificada">Reunión modificada</string>
    <string name="msj_titulo_tarea">Ponle un título a la tarea</string>
    <string name="msj_gasto_tarea">Formato de gasto incorrecto</string>
    <string name="msj_tarea_creada">Nueva tarea creada</string>
    <string name="msj_tarea_modificada">Tarea modificada</string>
    <string name="msj_tarea_eliminada">Tarea eliminada</string>



    <!--    Nombres de botones-->
    <string name="bt_registrar">REGISTRAR</string>
    <string name="bt_acceder">ACCEDER</string>
    <string name="bt_google">INICIAR SESIÓN CON GOOGLE</string>
    <string name="bt_confirmar">CONFIRMAR</string>
    <string name="bt_cancelar">CANCELAR</string>
    <string name="bt_solicitar_codigo">SOLICITAR CODIGO</string>
    <string name="bt_guardar">GUARDAR</string>
    <string name="bt_verificar">VERIFICAR</string>
    <string name="bt_crear">CREAR</string>
    <string name="bt_unirse">UNIRSE</string>
    <string name="bt_rechazar">RECHAZAR</string>
    <string name="bt_ok">OK</string>
    <string name="bt_editar_tarea">EDITAR</string>
    <string name="bt_delete_tarea">BORRAR</string>

    <!--    Etiquetas de texto-->
    <string name="tag_nombre">Nombre de usuario</string>
    <string name="tag_imagen">Imagen de perfil</string>
    <string name="tag_cuenta">Cuenta de usuario</string>
    <string name="tag_confirmar_pass">Confirma tu contraseña</string>
    <string name="tag_vincular_tlf">Vincular teléfono</string>
    <string name="tag_desvincular_tlf">Desvincular teléfono</string>
    <string name="tag_cerrar_sesion">Cerrar sesión</string>
    <string name="tag_deshabilitar">Deshabilitar cuenta</string>
    <string name="tag_mis_reuniones">Mis reuniones</string>
    <string name="tag_no_reuniones">No hay elementos para mostrar</string>
    <string name="tag_asignado">Encargado</string>
    <string name="tag_creador">[Creador]</string>
    <string name="tag_expulsar">¿Expulsar a</string>
    <string name="tag_reenviar">¿Reenviar invitación a</string>
    <string name="tag_asistentes">Lista de asistentes</string>
    <string name="tag_tareas">Tareas</string>
    <string name="tag_nuevatarea">Nueva tarea</string>
    <string name="tag_done">¡Hecho!</string>
    <string name="tag_opcion">Opción</string>

    <!--    Textos largos-->
    <string name="text_subtitulo_cerrar">Si cierras sesión, tendrás que
        validar tus credenciales al volver a iniciar la app.</string>
    <string name="text_subtitulo_vincular">Vincular el teléfono permite enviar
        y recibir invitaciones entre contactos de manera sencilla </string>
    <string name="text_subtitulo_deshabilitar">Se suspenderá tu actividad, pero podrás rehabilitarla
        volviendo a acceder a la cuenta.</string>
    <string name="text_dialog_deshabilitar">Si dehabilitas tu cuenta: \n
    - Ya no podrás acceder a las reuniones activas a las que hayas sido invitado.\n
    - Los demás no podrán acceder a las reuniones que hayas creado y todavía no se hayan celebrado.\n
    ¿Deseas deshabilitar tu cuenta?</string>
    <string name="text_borrar_reunion">¿Deseas borrar esta reunión?\nEsta acción es permanente.</string>
    <string name="text_borrar_tarea">¿Deseas borrar esta tarea?\nEsta acción es permanente.</string>

    <!--    Varios-->
    <string name="text_prefijo_sp">+34</string>
    <string name="text_sin_asignar">~Sin asignar~</string>
    <string name="text_undefined">[Por determinar]</string>
    <string name="text_cargando">Cargando…</string>
    <string name="text_invitados">Cargando invitados…</string>

    <!--    Hints-->
    <string name="hint_email">Email</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_codigo_verificacion">Código de verificación</string>
    <string name="hint_titulo_tarea">Nombre tarea</string>
    <string name="hint_descrip_tarea">Descripción (opcional)</string>
    <string name="hint_gasto_tarea">Gasto (€)</string>

    <!--    About-->
    <string name="about_equipo">Equipo de desarrollo</string>
    <string name="about_creador1">Andrés Montaño Villafañe</string>
    <string name="about_creador2">Carlos Blanco Fermin</string>
    <string name="about_creador3">Daniel Liñeira Santos</string>
    <string name="about_tecnologias">Tecnologias empleadas</string>
    <string name="about_codigo">Codigo del proyecto</string>

    <!--    Add-->
    <string name="add_hint_nombre">Nombre del evento</string>
    <string name="add_hint_lugar">Dónde se hace</string>
    <string name="add_hint_fecha">Elige un día</string>
    <string name="add_hint_hora">Elige una hora</string>
    <string name="add_descripciontitle">DESCRIPCIÓN</string>
    <string name="add_hint_descripcion">Resumen del evento</string>
    <string name="add_invitaciones">Generar invitacion</string>
    <string name="add_crear">Crear evento</string>
</resources>