<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/person_fill0_wght400_grad0_opsz24"
            android:title="@string/menu_perfil"/>
        <item
            android:id="@+id/nav_Add"
            android:icon="@drawable/nav_add"
            android:title="@string/menu_nueva_reunion"/>

        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/menu_settings"/>

        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/nav_about"
            android:title="@string/menu_about"/>
    </group>



</menu>