<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.weMee7.view.fragments.PerfilFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPerfilBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPerfilImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPerfilVincular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.7"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPerfilLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPerfilRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"/>

    <ImageButton
        android:id="@+id/btPerfilUndo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_undo"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_margin="3dp"
        android:visibility="gone"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glPerfilBotones"
        app:layout_constraintStart_toStartOf="@id/glPerfilLeft"
        app:layout_constraintEnd_toStartOf="@+id/btPerfilGuardar" />
    <Button
        android:id="@+id/btPerfilGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/medium"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:text="@string/bt_guardar"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glPerfilBotones"
        app:layout_constraintStart_toEndOf="@id/btPerfilUndo"
        app:layout_constraintEnd_toEndOf="@+id/glPerfilRight"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/glPerfilBotones"
        app:layout_constraintBottom_toTopOf="@id/glPerfilImagen"
        app:layout_constraintStart_toStartOf="@id/glPerfilLeft"
        app:layout_constraintEnd_toEndOf="@id/glPerfilRight">
        <TextView
            android:id="@+id/tvPerfilNombre"
            android:text="@string/tag_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/light"
            />
            <EditText
                android:id="@+id/etPerfilNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"/>

        <include layout="@layout/separador" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvPerfilImage"
        android:text="@string/tag_imagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/light"
        app:layout_constraintTop_toTopOf="@id/glPerfilImagen"
        app:layout_constraintBottom_toTopOf="@id/btPerfilUpImage"
        app:layout_constraintStart_toEndOf="@id/glPerfilLeft"
        app:layout_constraintEnd_toEndOf="@id/glPerfilRight"
        />


    <ImageButton
        android:id="@+id/btPerfilUpImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:src="@drawable/arrow_up"
        android:background="@drawable/boton_selector"
        app:layout_constraintTop_toBottomOf="@id/tvPerfilImage"
        app:layout_constraintStart_toStartOf="@id/ivPerfilImagen"
        app:layout_constraintEnd_toEndOf="@id/ivPerfilImagen"
        app:layout_constraintBottom_toTopOf="@id/ivPerfilImagen"
        />

    <ImageView
        android:id="@+id/ivPerfilImagen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:src="@android:drawable/ic_menu_info_details"
        android:background="@drawable/avatar_form"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/btPerfilUpImage"
        app:layout_constraintBottom_toTopOf="@id/btPerfilDownImage"
        app:layout_constraintStart_toEndOf="@id/btPerfilLeftColor"
        app:layout_constraintEnd_toStartOf="@id/btPerfilRightColor"
        />

    <ImageButton
        android:id="@+id/btPerfilDownImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:src="@drawable/arrow_up"
        android:rotation="180"
        android:background="@drawable/boton_selector"
        app:layout_constraintTop_toBottomOf="@id/ivPerfilImagen"
        app:layout_constraintBottom_toTopOf="@id/glPerfilVincular"
        app:layout_constraintStart_toStartOf="@id/ivPerfilImagen"
        app:layout_constraintEnd_toEndOf="@id/ivPerfilImagen"
        />

    <ImageButton
        android:id="@+id/btPerfilLeftColor"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:src="@drawable/arrow_left"
        android:background="@drawable/boton_selector"
        app:layout_constraintTop_toTopOf="@id/ivPerfilImagen"
        app:layout_constraintBottom_toBottomOf="@id/ivPerfilImagen"
        app:layout_constraintStart_toStartOf="@id/glPerfilLeft"
        app:layout_constraintEnd_toStartOf="@id/ivPerfilImagen"
        />

    <ImageButton
        android:id="@+id/btPerfilRightColor"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:src="@drawable/arrow_left"
        android:rotation="180"
        android:background="@drawable/boton_selector"
        app:layout_constraintTop_toTopOf="@id/ivPerfilImagen"
        app:layout_constraintBottom_toBottomOf="@id/ivPerfilImagen"
        app:layout_constraintStart_toEndOf="@id/ivPerfilImagen"
        app:layout_constraintEnd_toStartOf="@id/glPerfilRight"
        />

    <LinearLayout
        android:id="@+id/btVincularTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/bordered_layout"
        app:layout_constraintTop_toTopOf="@id/glPerfilVincular"
        app:layout_constraintStart_toStartOf="@id/glPerfilLeft"
        app:layout_constraintEnd_toEndOf="@id/glPerfilRight">
        <include layout="@layout/separador" />
        <TextView
            android:id="@+id/tagVincularTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titulo_boton"/>
        <TextView
            android:id="@+id/subtitleVincularTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtitulo_boton"/>
        <include layout="@layout/separador" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>